# scanf

./: .clang-format  CMakeLists.txt  README.md  test.c
.devcontainer/: Dockerfile  devcontainer.json
samples/: FreeRTOSConfig.h  FreeRTOSConfigDefaults.h  example.c  trace_hooks.h
src/: FreeRTOSConfig.h  example.c  messages.h  scanf.c  scanf.h  scanf_FreeRTOSConfig.h  scanf_hooks.h  trace_hooks.h
